style.css
#map {
  /*background-color: #fff;
  border: 1px solid #ccc;*/
}
h1 {
    text-align: center;
    font-family: "Montserrat", "Helvetica";
    font-weight: normal;
    color: white;
    margin: 0;
	padding: 20px;
}
html {
    min-height:100%;
    overflow: hidden;
}
body {
    margin: 0;
    padding: 0;
    min-height:100%;
    background-image: 
    -webkit-repeating-linear-gradient(120deg, hsla(0,0%,100%,0) 50%, hsla(0,0%,100%,0)   6%, hsla(0,0%,100%, .1) 7.5%),
    -webkit-repeating-linear-gradient(120deg, hsla(0,0%,  0%,0) 0%, hsla(0,0%,  0%,0)   4%, hsla(0,0%,  0%,.03) 4.5%),
    -webkit-repeating-linear-gradient(120deg, hsla(0,0%,100%, 0) 0%, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,.15) 100%),
    linear-gradient(150deg, hsl(0,5%,8%) 10%, 
        rgb(0,0,0) 70%, 
        rgb(0,0,0) 10%,
        rgb(0,0,0) 30%);
}

.text{
    position: absolute;
    font-family: sans-serif;
    padding:10px;
    background: #fff;
    border-radius: 4px;
    display: none;
	z-index: 3;
}

.button {
	font-family: "Montserrat","Helvetica";
    background-color: #4CAF50;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    cursor: pointer;
	
}
#title{
	box-sizing: border-box;
}
#test {
	z-index:5;
}

a:hover {
 cursor:pointer;
}

#menu{
	padding:20px;
	display: block;
    margin-left: auto;
    margin-right: auto;
}
.rows{
	position:absolute;
	padding-left:1200px;
	padding-top:650px;
	display: block;
    margin-left: auto;
    margin-right: auto;
}


/* Center the loader */
#loader {
  position: absolute;
  left: 50%;
  top: 50%;
  z-index: 1;
  width: 150px;
  height: 150px;
  margin: -75px 0 0 -75px;
  border: 16px solid #f3f3f3;
  border-radius: 50%;
  border-top: 16px solid #3498db;
  width: 120px;
  height: 120px;
  -webkit-animation: spin 2s linear infinite;
  animation: spin 2s linear infinite;
}

@-webkit-keyframes spin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

/* Add animation to "page content" */
.animate-bottom {
  position: relative;
  -webkit-animation-name: animatebottom;
  -webkit-animation-duration: 1s;
  animation-name: animatebottom;
  animation-duration: 1s
}

@-webkit-keyframes animatebottom {
  from { bottom:-100px; opacity:0 } 
  to { bottom:0px; opacity:1 }
}

@keyframes animatebottom { 
  from{ bottom:-100px; opacity:0 } 
  to{ bottom:0; opacity:1 }
}



path {
  stroke: #fff;
}

.background {
  fill: none;
  pointer-events: all;
}

#countries, #states {
  /*fill: #e4b388;*/
  fill: #fff;
  stroke: #000;
  stroke-linejoin: round;
  stroke-linecap: round;
  stroke-width: 0.08;
}

#countries .active {
  fill: #dab89b;
}

#cities {
  stroke-width: 0;
}

.city {
  fill: #345;
  stroke: #fff;
}

pre.prettyprint {
  border: 1px solid #ccc;
  margin-bottom: 0;
  padding: 9.5px;
}

.wrap {
    margin: 0 auto;
    max-width:1000px;
}

#map {
    position: absolute;
    width: 333px;
    height: 333px;
    top:0;
    bottom: 0;
    left: 0;
    right: 0;
	z-index: 2;
	border-radius: 100%;
	overflow:hidden;

    margin: auto;
}

#sunburst {
    position: absolute;
    width: 700px;
    height: 700px;
	/*change this*/
    top:0px;
    bottom: 0;
    left: 0;
    right: 0;
	z-index: 1;

    margin: auto;
}

.container {
    position: fixed;
    width: 100%;
    height: 700px;
}

div.tooltip {
    position: absolute;
    text-align: center;
    width: 80px;
    height: 26px;
    padding: 2px;
    font: 12px sans-serif;
    background: #FFF8DC;
    border: 0px;
    border-radius: 8px;
    pointer-events: none;
}
/* Dropdown knapp */
.dropbtn {
    background-color: #4CAF50;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
    cursor: pointer;
}

/* Dropdown fokus */
.dropbtn:hover, .dropbtn:focus {
    background-color: #3e8e41;
}

/* sökfält */
#myInput {
  /*border-box: box-sizing;*/
  background-image: url('searchicon.png');
  background-position: 14px 12px;
  background-repeat: no-repeat;
  font-size: 16px;
  padding: 14px 20px 12px 45px;
  border: none;
  border-bottom: 1px solid #ddd;
}

/* sökfältet när det klickas på */
#myInput:focus {outline: 3px solid #ddd;}

/* diven för innehållet i dropdown */
.dropdown {
    position: absolute;
		/*position:absolute*/
    right: 200px;
	vertical-align: top;
    display: inline-block;
	z-index:5;
}

/* innehållet i dropdown */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f6f6f6;
    min-width: 230px;
    border: 1px solid #ddd;
    z-index: 1;
	
}

/* länkarna innuti dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* ändrar förgen på länkarna när man hoovrar */
.dropdown-content a:hover {background-color: #f1f1f1}

.show {display:block;}


/*Bottom align info buttons*/
.bottom-align-text {
    position: absolute;
    bottom: 20px;
  }
.helperbtns {
	margin:10px;
}

